feat: complete the product API module
